# ACPE-Match

./: .gitignore  ACPE_Match.md  README.md  docker-compose.yml  kaggle_seed_notebook.ipynb
.opencode/plans/: fix-overfitting.md
backend/: Dockerfile  build_faiss_index.py  catboost_ranker.cbm  dashboard.py  eda.ipynb  evaluate_matching.py  faiss_offers_meta.json  full_evaluation_v2.py  ranker_config.json  rapport_technique.md  requirements.txt  seed_candidates_only.py  seed_checkpoint_candidates.json  seed_data.py  seed_offers_enriched.py  test_backend.py  test_nlp_optimizations.py  train_ranker.py
backend/app/: chromadb_client.py  config.py  database.py  main.py  stats_cache.py
backend/app/models/: __init__.py  candidate.py  job_offer.py
backend/app/routers/: candidates.py  export_csv.py  job_offers.py  (+2 more)
backend/catboost_info/: test_error.tsv  time_left.tsv
matching_engine/: .gitignore  pyproject.toml
matching_engine/matching_engine/: __init__.py  config.py
matching_engine/matching_engine/data/graphs/: job_knowledge_graph_v3.json  secteur_knowledge_graph.json  speciality_knowledge_graph.json
matching_engine/matching_engine/data/mappings/: job_mapping_enriched.json  localite.json  niveau_etude.json  secteur_mapping.json  skills_enriched.json  speciality_mapping.json
matching_engine/matching_engine/enrichment/: __init__.py  knowledge_enricher.py  text_enricher.py
matching_engine/matching_engine/normalizers/: __init__.py  education_normalizer.py  job_normalizer.py  localite_normalizer.py  secteur_normalizer.py  skill_normalizer.py  speciality_normalizer.py
(+10 files in other folders)
